v1.0.1/_sources/Arbiter_boxes.rst.txt

Boxes
-----


plc-kfe-gatt
^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-kfe-gatt
    ID, 2
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001ce0006400010003000000000000000000001c64010000
        SyncMan, 008edf002000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", 12, "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", 1, "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", 1, "#x1801", "BIT"
        "None", "", 1, "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", 1, "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", 2, "#x10f4", "BIT2"
        "None", "", 10, "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", 1, "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", 1, "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", 1, "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", 1, "#x10f4", "BIT"
        "Internal time stamp", "", 64, "#x10f4", "ULINT"
        "External time stamp", "", 64, "#x10f4", "ULINT"
        "None", "", 32, "", "ARRAY [0..3] OF BYTE"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", 2, "#x10f4", "BIT2"
        "None", "", 10, "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", 1, "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", 1, "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", 1, "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", 1, "#x10f4", "BIT"
        "Internal time stamp", "", 32, "#x10f4", "UDINT"
        "External time stamp", "", 32, "#x10f4", "UDINT"
        "None", "", 32, "", "ARRAY [0..3] OF BYTE"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", 16, "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", 240, "#x6000", "ST_BeamParams_IO"
        "Current Transmission", "", 64, "#x6000", "ST_PMPS_Attenuator_IO"
        "bGattStatus", "", 8, "#x6000", "BYTE"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", 240, "#x7000", "ST_BeamParams_IO"
        "Requested Transmission", "", 64, "#x7000", "ST_PMPS_Attenuator_IO"
        "rPhotonEnergy", "", 32, "#x7000", "REAL"


.. raw:: html

   </details>


E0 (EK1200)
^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, E0 (EK1200)
    ID, 5


.. raw:: html

   </details>


FFO
^^^


.. raw:: html

   <details>
        <summary>EtherCAT (2 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, FFO
    ID, 8
        SyncMan, 000f01004400010003000000000000000000000f44090000
        Fmmu, 0000000000000000000f00020100000001000000060000000000000000000000



PDO Channel 1 (Index #x1600, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7000", "BIT"
        "TriState", "", , "#x7000", "BIT"



PDO Channel 2 (Index #x1601, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7010", "BIT"
        "TriState", "", , "#x7010", "BIT"


.. raw:: html

   </details>


PMPS_Premp
^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (16 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, PMPS_Premp
    ID, 9
        SyncMan, 000f01004400010003000000000000000100000f44090000
        SyncMan, 010f01004400010003000000000000000100010f44090000
        Fmmu, 0000000000000000000f00020100000001000000000000000000000000000000



PDO Channel 1 (Index #x1600, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7000", "BIT"



PDO Channel 2 (Index #x1601, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7010", "BIT"



PDO Channel 3 (Index #x1602, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7020", "BIT"



PDO Channel 4 (Index #x1603, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7030", "BIT"



PDO Channel 5 (Index #x1604, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7040", "BIT"



PDO Channel 6 (Index #x1605, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7050", "BIT"



PDO Channel 7 (Index #x1606, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7060", "BIT"



PDO Channel 8 (Index #x1607, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7070", "BIT"



PDO Channel 9 (Index #x1608, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7080", "BIT"



PDO Channel 10 (Index #x1609, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x7090", "BIT"



PDO Channel 11 (Index #x160a, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x70a0", "BIT"



PDO Channel 12 (Index #x160b, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "ST3K4 RELAY IN", "", , "#x70b0", "BIT"



PDO Channel 13 (Index #x160c, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "MR1K1 IN", "", , "#x70c0", "BIT"



PDO Channel 14 (Index #x160d, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "ST1K2 RELAY IN", "", , "#x70d0", "BIT"



PDO Channel 15 (Index #x160e, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x70e0", "BIT"



PDO Channel 16 (Index #x160f, Flags #x0011, SyncMan 1)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Output", "", , "#x70f0", "BIT"


.. raw:: html

   </details>


E3 (EK1122)
^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, E3 (EK1122)
    ID, 12


.. raw:: html

   </details>


950-101W-R4-MPS-2
^^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, 950-101W-R4-MPS-2
    ID, 13


.. raw:: html

   </details>


PPS Stoppers 1
^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (8 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, PPS Stoppers 1
    ID, 14
        SyncMan, 001001000000010004000000000000000100001000010000
        Fmmu, 0000000000000000001000010100000002000000000000000000000000000000



PDO Channel 1 (Index #x1a00, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "ST3K4 IN", "", , "#x6000", "BIT"



PDO Channel 2 (Index #x1a01, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "ST3K4 OUT", "", , "#x6010", "BIT"



PDO Channel 3 (Index #x1a02, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "ST1K2 IN", "", , "#x6020", "BIT"



PDO Channel 4 (Index #x1a03, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "ST1K2 OUT", "", , "#x6030", "BIT"



PDO Channel 5 (Index #x1a04, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6040", "BIT"



PDO Channel 6 (Index #x1a05, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6050", "BIT"



PDO Channel 7 (Index #x1a06, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6060", "BIT"



PDO Channel 8 (Index #x1a07, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6070", "BIT"


.. raw:: html

   </details>


PPS Stoppers 2
^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (8 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, PPS Stoppers 2
    ID, 15
        SyncMan, 001001000000010004000000000000000100001000010000
        Fmmu, 0000000000000000001000010100000002000000000000000000000000000000



PDO Channel 1 (Index #x1a00, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6000", "BIT"



PDO Channel 2 (Index #x1a01, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6010", "BIT"



PDO Channel 3 (Index #x1a02, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6020", "BIT"



PDO Channel 4 (Index #x1a03, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6030", "BIT"



PDO Channel 5 (Index #x1a04, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6040", "BIT"



PDO Channel 6 (Index #x1a05, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6050", "BIT"



PDO Channel 7 (Index #x1a06, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6060", "BIT"



PDO Channel 8 (Index #x1a07, Flags #x0011, SyncMan 0)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Input", "", , "#x6070", "BIT"


.. raw:: html

   </details>


plc-kfe-motion
^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-kfe-motion
    ID, 19
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001c88016400010003000000000000000000001c64010000
        SyncMan, 008e86012000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", , "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1801", "BIT"
        "None", "", , "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "None", "", , "", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "None", "", , "", "UDINT"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", , "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "AptArrayStatus", "", , "#x6000", "ARRAY [1..4] OF ST_PMPS_Aperture_IO"
        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"
        "SattArrayStatus", "", , "#x6000", "ARRAY [1..16] OF ST_PMPS_Attenuator_IO"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "AptArrayReq", "", , "#x7000", "ARRAY [1..4] OF ST_PMPS_Aperture_IO"
        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"
        "SattArrayReq", "", , "#x7000", "ARRAY [1..16] OF ST_PMPS_Attenuator_IO"
        "rPhotonEnergy", "", , "#x7000", "REAL"


.. raw:: html

   </details>


plc-kfe-gmd-vac-01
^^^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-kfe-gmd-vac-01
    ID, 20
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001cd4006400010003000000000000000000001c64010000
        SyncMan, 008ed6002000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", , "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1801", "BIT"
        "None", "", , "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "None", "", , "", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "None", "", , "", "UDINT"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", , "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>


plc-kfe-xgmd-vac-01
^^^^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-kfe-xgmd-vac-01
    ID, 21
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001cd4006400010003000000000000000000001c64010000
        SyncMan, 008ed6002000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", , "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1801", "BIT"
        "None", "", , "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "None", "", , "", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "None", "", , "", "UDINT"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", , "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>


Term 22 (EK1110)
^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, Term 22 (EK1110)
    ID, 22


.. raw:: html

   </details>


B940-009-R07-MPS-1 CU1-ESC1
^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, B940-009-R07-MPS-1 CU1-ESC1
    ID, 23


.. raw:: html

   </details>


B940-009-R07-MPS-1 CU1-ESC2
^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, B940-009-R07-MPS-1 CU1-ESC2
    ID, 28


.. raw:: html

   </details>


B940-009-R07-MPS-1 CU1-ESC3
^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, B940-009-R07-MPS-1 CU1-ESC3
    ID, 29


.. raw:: html

   </details>


950-101W-R4-MPS-2-E3 (EL9011)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, 950-101W-R4-MPS-2-E3 (EL9011)
    ID, 30


.. raw:: html

   </details>


plc-kfe-vac
^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (5 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-kfe-vac
    ID, 32
        SyncMan, 001000012600010001000000800000040001001026010000
        SyncMan, 001400012200010002000000800000040001001422010000
        SyncMan, 0018d4002400010003000000000000000000001824010000
        SyncMan, 001ed6002000010004000000000000000200001e20010000
        Fmmu, 0000000000000000001800020100000001000000000000000000000000000000
        Fmmu, 0000000000000000001e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "Control Value for DC Master Clock", "", , "#x10f4", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "Control Value for DC Master Clock", "", , "#x10f4", "UDINT"



PDO IO Inputs (Index #x1a00, Flags #x0021, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1600, Flags #x0021, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>


plc-tmo-mot
^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (5 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-tmo-mot
    ID, 34
        SyncMan, 001000012600010001000000800000040001001026010000
        SyncMan, 001400012200010002000000800000040001001422010000
        SyncMan, 001800002400000003000000000000000000001824010000
        SyncMan, 001e02002000010004000000000000000200001e20010000
        Fmmu, 0000000000000000000000020000000001000000000000000000000000000000
        Fmmu, 0000000000000000001e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "Control Value for DC Master Clock", "", , "#x10f4", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "Control Value for DC Master Clock", "", , "#x10f4", "UDINT"



PDO IO Inputs (Index #x1a00, Flags #x0021, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1600, Flags #x0021, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>


plc-tmo-optics
^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-tmo-optics
    ID, 35
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001cd4006400010003000000000000000000001c64010000
        SyncMan, 008ed6002000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", , "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1801", "BIT"
        "None", "", , "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "None", "", , "", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "None", "", , "", "UDINT"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", , "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>


plc-tmo-vac
^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (5 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-tmo-vac
    ID, 36
        SyncMan, 001000012600010001000000800000040001001026010000
        SyncMan, 001400012200010002000000800000040001001422010000
        SyncMan, 001800002400000003000000000000000000001824010000
        SyncMan, 001e02002000010004000000000000000200001e20010000
        Fmmu, 0000000000000000000000020000000001000000000000000000000000000000
        Fmmu, 0000000000000000001e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "Control Value for DC Master Clock", "", , "#x10f4", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..5] OF BIT"
        "None", "", , "", "ARRAY [0..2] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1800", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1800", "BIT"
        "Control value update toggle", "Bit toggles when new DC control data available", , "#x10f4", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "Control Value for DC Master Clock", "", , "#x10f4", "UDINT"



PDO IO Inputs (Index #x1a00, Flags #x0021, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1600, Flags #x0021, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>


plc-rix-mot
^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-rix-mot
    ID, 38
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001c58016400010003000000000000000000001c64010000
        SyncMan, 008e56012000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", 12, "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", 1, "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", 1, "#x1801", "BIT"
        "None", "", 1, "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", 1, "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", 2, "#x10f4", "BIT2"
        "None", "", 10, "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", 1, "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", 1, "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", 1, "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", 1, "#x10f4", "BIT"
        "Internal time stamp", "", 64, "#x10f4", "ULINT"
        "External time stamp", "", 64, "#x10f4", "ULINT"
        "None", "", 32, "", "ARRAY [0..3] OF BYTE"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", 2, "#x10f4", "BIT2"
        "None", "", 10, "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", 1, "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", 1, "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", 1, "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", 1, "#x10f4", "BIT"
        "Internal time stamp", "", 32, "#x10f4", "UDINT"
        "External time stamp", "", 32, "#x10f4", "UDINT"
        "None", "", 32, "", "ARRAY [0..3] OF BYTE"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", 16, "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"
        "SattArrayStatus", "", , "#x6000", "ARRAY [1..16] OF ST_PMPS_Attenuator_IO"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"
        "rPhotonEnergy", "", , "#x7000", "REAL"
        "SattArrayReq", "", , "#x7000", "ARRAY [1..16] OF ST_PMPS_Attenuator_IO"


.. raw:: html

   </details>


plc-rix-vac
^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-rix-vac
    ID, 39
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001cd4006400010003000000000000000000001c64010000
        SyncMan, 008ed6002000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", , "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1801", "BIT"
        "None", "", , "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "None", "", , "", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "None", "", , "", "UDINT"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", , "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>


plc-rix-optics
^^^^^^^^^^^^^^


.. raw:: html

   <details>
        <summary>EtherCAT (6 PDOs)</summary>

.. csv-table:: Basic Settings
    :header: Name, Data
    :align: center

    Name, plc-rix-optics
    ID, 40
        BootStrapData, 0010140200141402
        SyncMan, 0010000426000100010000008000da050004001026010000
        SyncMan, 0016000422000100020000008000da050004001622010000
        SyncMan, 001cd8006400010003000000000000000000001c64010000
        SyncMan, 008eda002000010004000000000000000200008e20010000
        Fmmu, 0000000000000000001c00020100000001000000000000000000000000000000
        Fmmu, 0000000000000000008e00010100000002000000000000000000000000000000
        Fmmu, 00000000000000000d0800010100000003000000000000000000000000000000
        CoeProfile, 5001



PDO SYNC Inputs (Index #x1a01, Flags #x0010, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "None", "", , "", "ARRAY [0..11] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1801", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1801", "BIT"
        "None", "", , "", "ARRAY [0..0] OF BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"



PDO SYNC Inputs (Index #x1a02, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1802", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1802", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "ULINT"
        "External time stamp", "", , "#x10f4", "ULINT"
        "None", "", , "", "UDINT"



PDO SYNC Inputs (Index #x1a03, Flags #x0010, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Sync Mode", "0: no Syncronisation 1: Secondary side is Sync Master 2: Primary side is Sync Master", , "#x10f4", "BIT2"
        "None", "", , "", "ARRAY [0..9] OF BIT"
        "TxPDO toggle", "Bit toggles when new data from other side received", , "#x1803", "BIT"
        "TxPDO state", "0: Other side is in OP state >0: Error", , "#x1803", "BIT"
        "Timestamp update toggle", "Bit toggles when new timestamp data available", , "#x10f4", "BIT"
        "External device not connected", "0: External device connected 1: External device not connected", , "#x10f4", "BIT"
        "Internal time stamp", "", , "#x10f4", "UDINT"
        "External time stamp", "", , "#x10f4", "UDINT"
        "None", "", , "", "UDINT"



PDO FOE Info (Index #x1a05, Flags #x0020, SyncMan )

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "Data Bytes Pending", "", , "#xf650", "UINT"



PDO IO Inputs (Index #x1a08, Flags #x0020, SyncMan 3)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "MR1K1_Y_ENC", "", , "#x6000", "UDINT"
        "RequestedBP", "", , "#x6000", "ST_BeamParams_IO"



PDO IO Outputs (Index #x1608, Flags #x0020, SyncMan 2)

.. csv-table::
    :header: Name, Comment, BitLen, Index, Type
    :align: center

        "rPhotonEnergy", "", , "#x7000", "REAL"
        "CurrentBP", "", , "#x7000", "ST_BeamParams_IO"


.. raw:: html

   </details>

